# Haberlea

./: .gitignore  README.md  pyproject.toml
src/haberlea/: __init__.py  __main__.py  cli.py  core.py  download_queue.py  housekeeping.py  i18n.py  music_downloader.py  tagging.py
src/haberlea/core/: __init__.py  bootstrap.py  extension_manager.py  haberlea.py  module_registry.py  orchestrator.py  session_manager.py  settings_synchronizer.py
src/haberlea/downloader/: __init__.py  asset_manager.py  contexts.py  facade.py  finalizer.py  protocols.py  queue_builder.py  results.py  track_downloader.py
src/haberlea/locales/en_US/LC_MESSAGES/: messages.po
src/haberlea/locales/zh_CN/LC_MESSAGES/: messages.po
src/haberlea/plugins/: __init__.py  base.py  loader.py
src/haberlea/utils/: __init__.py  exceptions.py  m3u.py  models.py  path_builder.py  progress.py  settings.py  tempfile_manager.py  transcoder.py  utils.py
src/haberlea/webui/: __init__.py  auth.py  download_service.py  main.py  state.py
src/haberlea/webui/components/: __init__.py  header.py  sidebar.py
src/haberlea/webui/pages/: __init__.py  download.py  logs.py  search.py  settings.py
